fix horizontal scroll bar

--- a/about.css
+++ b/about.css
@@ -120,7 +120,7 @@ body{
     }
     .text-wrapper * {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        width: 100vw;
+        width: 94vw;
     }
 
     #mission-statement {
